Fix navbar on iphones.

--- a/static/css/less_css/less/tba/tba_base.less
+++ b/static/css/less_css/less/tba/tba_base.less
@@ -22,6 +22,7 @@
 
 #subnav {
   margin-left: 15px;
+  margin-right: 0px;
 }
 
 .xcharts-data {
